.metadata/.plugins/org.eclipse.cdt.ui/Client.build.log
12:48:49 **** Incremental Build of configuration Release for project Client ****
make all 
Building file: ../client.cpp
Starting C++ compile
"/opt/sloeber//arduinoPlugin/packages/arduino/tools/arm-none-eabi-gcc/4.8.3-2014q1/bin/arm-none-eabi-g++" -mcpu=cortex-m0plus -mthumb -c -g -Os -Wall -Wextra -std=gnu++11 -ffunction-sections -fdata-sections -fno-threadsafe-statics -nostdlib --param max-inline-insns-single=500 -fno-rtti -fno-exceptions -MMD -DF_CPU=48000000L -DARDUINO=10802 -DARDUINO_SAMD_ZERO -DARDUINO_ARCH_SAMD  -D__SAMD21G18A__ -DUSB_VID=0x2341 -DUSB_PID=0x804d -DUSBCON '-DUSB_MANUFACTURER="Arduino LLC"' '-DUSB_PRODUCT="Arduino Zero"' "-I/opt/sloeber//arduinoPlugin/packages/arduino/tools/CMSIS/4.5.0/CMSIS/Include/" "-I/opt/sloeber//arduinoPlugin/packages/arduino/tools/CMSIS-Atmel/1.1.0/CMSIS/Device/ATMEL/"   -I"/opt/sloeber/arduinoPlugin/packages/arduino/hardware/samd/1.6.19/cores/arduino" -I"/home/sysadmin/Documents/Projects/CDS/Sensor/Arduino/Libraries/RadioHeadPairing/1.8.3/src" -I"/home/sysadmin/Documents/Projects/CDS/Sensor/Arduino/Libraries/SPIMemory/src" -I"/home/sysadmin/Documents/Projects/CDS/Sensor/Arduino/Libraries/Si7021" -I"/opt/sloeber/arduinoPlugin/packages/arduino/hardware/samd/1.6.19/variants/arduino_zero" -I"/opt/sloeber/arduinoPlugin/libraries/RTCZero/1.5.2/src" -I"/opt/sloeber/arduinoPlugin/packages/arduino/hardware/samd/1.6.19/libraries/SPI" -I"/opt/sloeber/arduinoPlugin/packages/arduino/hardware/samd/1.6.19/libraries/Wire" -I"/home/sysadmin/Documents/Projects/CDS/Sensor/Arduino/Common" -MMD -MP -MF"client.cpp.d" -MT"client.cpp.o" -D__IN_ECLIPSE__=1 -x c++ "../client.cpp"  -o  "client.cpp.o"
../client.cpp: In function 'void setup()':
../client.cpp:586:10: error: 'POWER_OFF_PIN' was not declared in this scope
  pinMode(POWER_OFF_PIN, INPUT);
          ^
../client.cpp: In function 'void loop()':
../client.cpp:739:15: error: 'POWER_OFF_PIN' was not declared in this scope
        pinStr(POWER_OFF_PIN, HIGH);     // Set the pin to High Drive Strength
               ^
subdir.mk:18: recipe for target 'client.cpp.o' failed
make: *** [client.cpp.o] Error 1

12:48:50 Build Failed. 4 errors, 0 warnings. (took 416ms)

